--- a/style.css
+++ b/style.css
@@ -183,5 +183,20 @@ body {
 	justify-content: space-between;
 }
 .forms {
+	display: block;
+}
+.continuebtn {
+	cursor: pointer;
+	margin-top: 2rem;
+	width: 435px;
+	height: 55px;
+	background-color: hsl(278, 68%, 11%);
+	border-radius: 10px;
+	color: hsl(270, 3%, 87%);
+}
+.thanksstate {
 	display: none;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
