--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	height: 100vh;
+	height: 98vh;
 	width: 100%;
 }
 .cards {
@@ -163,6 +163,12 @@ body {
 	width: 435px;
 	height: 45px;
 }
+#errorMonthYear {
+	border: 2px solid hsl(0, 100%, 66%);
+	border-radius: 10px;
+	width: 100px;
+	height: 45px;
+}
 .labelcv {
 	margin-left: 4rem;
 }
@@ -208,4 +214,12 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+}
+.errors,
+.errorNum {
+	color: hsl(0, 100%, 66%);
+}
+else {
+	errorNum.innerHTML = ``;
+	cardnumInput.id = `cardnum`;
 }
