--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ body {
 	height: 30vh;
 	width: 55vh;
 	margin-left: -15rem;
-	border: 1px solid hsl(278, 94%, 30%);
 	border-radius: 13px;
 	color: hsl(0, 0%, 100%);
+	box-shadow: 32px 36px 73px -22px rgba(0, 0, 0, 1);
 }
 .firstcard img {
 	margin-top: 2rem;
@@ -54,28 +54,27 @@ body {
 	letter-spacing: 5px;
 	text-align: center;
 	font-size: 30px;
-	margin-top: 5rem;
-	margin-bottom: -2rem;
+	margin-top: 3rem;
 	font-weight: 500;
 }
 .nameexp {
 	display: inline-flex;
-	margin-top: 4rem;
-	margin-left: 3rem;
+	margin-top: 2rem;
+	margin-left: 2rem;
 	font-size: 20px;
 	font-weight: 300;
 	text-transform: uppercase;
 }
 .nameexp p:nth-child(2) {
-	margin-left: 23rem;
+	margin-left: 21rem;
 	position: fixed;
 }
 .nameexp p:nth-child(3) {
-	margin-left: 25rem;
+	margin-left: 23rem;
 	position: fixed;
 }
 .nameexp p:nth-child(4) {
-	margin-left: 26rem;
+	margin-left: 24rem;
 	position: fixed;
 }
 .secpage {
@@ -84,11 +83,13 @@ body {
 	align-items: center;
 	justify-content: flex-end;
 	background-image: url(images/bg-card-back.png);
-	height: 26vh;
-	width: 48vh;
+	background-size: cover;
+	height: 27vh;
+	width: 50vh;
 	margin-left: -5rem;
 	margin-top: 4rem;
 	letter-spacing: 5px;
+	box-shadow: 32px 36px 73px -22px rgba(0, 0, 0, 1);
 }
 .secpage p {
 	margin-right: 4rem;
@@ -239,4 +240,399 @@ body {
 }
 .blankcardholder {
 	color: hsl(0, 100%, 66%);
+}
+
+/* max width 600px*/
+@media screen and (min-width: 375px) and (max-width: 850px) {
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		height: 98vh;
+		width: 100%;
+	}
+	.cards {
+		display: flex;
+		flex-direction: column-reverse;
+
+		margin-left: 15rem;
+		margin-top: -15rem;
+	}
+	.firstcard {
+		background-image: url(images/bg-card-front.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 20vh;
+		width: 36vh;
+		margin-left: -17rem;
+		margin-top: -3rem;
+		border-radius: 9px;
+		color: hsl(0, 0%, 100%);
+		box-shadow: 32px 36px 73px -22px rgb(0 0 0);
+	}
+	.firstcard img {
+		width: 50px;
+		margin-top: 2rem;
+		margin-left: 5rem;
+	}
+	.firstcard h1 {
+		letter-spacing: 5px;
+		text-align: center;
+		font-size: 30px;
+		margin-top: 3rem;
+		font-weight: 500;
+	}
+	.secpage {
+		color: hsl(0, 0%, 100%);
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		background-image: url(images/bg-card-back.png);
+		background-size: contain;
+		background-repeat: no-repeat;
+		height: 20vh;
+		width: 36vh;
+		margin-left: -14rem;
+		margin-top: 3rem;
+		letter-spacing: 5px;
+		box-shadow: 11px 2px 18px 9px rgb(0 0 0);
+		border-radius: 9px;
+	}
+	.leftside {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		background-image: url(images/bg-main-mobile.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%;
+		flex: 1;
+	}
+	.rightside {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex: 2;
+	}
+	.secpage p {
+		margin-right: 2rem;
+	}
+	.firstcard h1 {
+		letter-spacing: 2px;
+		text-align: left;
+		margin-top: 1rem;
+		margin-bottom: 1rem;
+		font-size: 15px;
+		margin-left: 1rem;
+		font-weight: 500;
+	}
+	.nameexp {
+		display: inline-flex;
+		margin-top: 1rem;
+		margin-left: 1rem;
+		font-size: 15px;
+		font-weight: 300;
+		text-transform: uppercase;
+	}
+	.nameexp p:nth-child(2) {
+		margin-left: 13.2rem;
+		position: fixed;
+	}
+	.nameexp p:nth-child(3) {
+		margin-left: 14.5rem;
+		position: fixed;
+	}
+	.nameexp p:nth-child(4) {
+		margin-left: 15rem;
+		position: fixed;
+	}
+	.firstcard img {
+		margin-top: 1rem;
+		margin-left: 2rem;
+	}
+	.rightside form {
+		width: 300px;
+		height: 345px;
+	}
+	#cardholder,
+	#cardnum {
+		border: 1px solid hsl(279, 6%, 55%);
+		border-radius: 10px;
+		margin-bottom: 1px;
+		width: 100%;
+		height: 54px;
+		margin-top: 1rem;
+	}
+	#month,
+	#year {
+		width: 25%;
+		height: 45px;
+		margin-top: 1rem;
+		margin-right: 1rem;
+		border: 1px solid hsl(279, 6%, 55%);
+		border-radius: 10px;
+	}
+	#cvcinput {
+		width: 36%;
+		height: 45px;
+		border: 1px solid hsl(279, 6%, 55%);
+		border-radius: 10px;
+	}
+	.confirmButton {
+		cursor: pointer;
+		margin-top: -4rem;
+		width: 100%;
+		height: 55px;
+		background-color: hsl(278, 68%, 11%);
+		border-radius: 10px;
+		color: hsl(270, 3%, 87%);
+	}
+	.rightside label {
+		text-transform: uppercase;
+		color: hsl(278, 68%, 11%);
+		font-size: 15px;
+	}
+	#errorBorder {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 100%;
+		height: 45px;
+	}
+	#errorBorders {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 100%;
+		height: 45px;
+	}
+	#errorMonthYear {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 25%;
+		height: 45px;
+	}
+	#errorYear {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 25%;
+		height: 45px;
+	}
+	#wrongcvc {
+		width: 36%;
+		height: 45px;
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+	}
+	.errors {
+		display: flex;
+		width: 270px;
+		justify-content: space-between;
+	}
+	.continuebtn {
+		cursor: pointer;
+		margin-top: 2rem;
+		width: 100%;
+		height: 55px;
+		background-color: hsl(278, 68%, 11%);
+		border-radius: 10px;
+		color: hsl(270, 3%, 87%);
+	}
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 375px) and (-webkit-min-device-pixel-ratio: 2) {
+	.container {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		height: 98vh;
+		width: 100%;
+	}
+	.cards {
+		display: flex;
+		flex-direction: column-reverse;
+
+		margin-left: 15rem;
+		margin-top: -15rem;
+	}
+	.firstcard {
+		background-image: url(images/bg-card-front.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		height: 20vh;
+		width: 36vh;
+		margin-left: -17rem;
+		margin-top: -3rem;
+		border-radius: 9px;
+		color: hsl(0, 0%, 100%);
+		box-shadow: 32px 36px 73px -22px rgb(0 0 0);
+	}
+	.firstcard img {
+		width: 50px;
+		margin-top: 2rem;
+		margin-left: 5rem;
+	}
+	.firstcard h1 {
+		letter-spacing: 5px;
+		text-align: center;
+		font-size: 30px;
+		margin-top: 3rem;
+		font-weight: 500;
+	}
+	.secpage {
+		color: hsl(0, 0%, 100%);
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		background-image: url(images/bg-card-back.png);
+		background-size: contain;
+		background-repeat: no-repeat;
+		height: 20vh;
+		width: 36vh;
+		margin-left: -14rem;
+		margin-top: 3rem;
+		letter-spacing: 5px;
+		box-shadow: 11px 2px 18px 9px rgb(0 0 0);
+		border-radius: 9px;
+	}
+	.leftside {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		background-image: url(images/bg-main-mobile.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%;
+		flex: 1;
+	}
+	.rightside {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex: 2;
+	}
+	.secpage p {
+		margin-right: 2rem;
+	}
+	.firstcard h1 {
+		letter-spacing: 2px;
+		text-align: left;
+		margin-top: 1rem;
+		margin-bottom: 0rem;
+		font-size: 15px;
+		margin-left: 1rem;
+		font-weight: 500;
+	}
+	.nameexp {
+		display: inline-flex;
+		margin-top: 1rem;
+		margin-left: 1rem;
+		font-size: 13px;
+		font-weight: 300;
+		text-transform: uppercase;
+	}
+	.nameexp p:nth-child(2) {
+		margin-left: 10.2rem;
+		position: fixed;
+	}
+	.nameexp p:nth-child(3) {
+		margin-left: 11.5rem;
+		position: fixed;
+	}
+	.nameexp p:nth-child(4) {
+		margin-left: 12rem;
+		position: fixed;
+	}
+	.firstcard img {
+		margin-top: 1rem;
+		margin-left: 2rem;
+	}
+	.rightside form {
+		width: 300px;
+		height: 345px;
+	}
+	#cardholder,
+	#cardnum {
+		border: 1px solid hsl(279, 6%, 55%);
+		border-radius: 10px;
+		margin-bottom: 1px;
+		width: 100%;
+		height: 54px;
+		margin-top: 1rem;
+	}
+	#month,
+	#year {
+		width: 25%;
+		height: 45px;
+		margin-top: 1rem;
+		margin-right: 1rem;
+		border: 1px solid hsl(279, 6%, 55%);
+		border-radius: 10px;
+	}
+	#cvcinput {
+		width: 36%;
+		height: 45px;
+		border: 1px solid hsl(279, 6%, 55%);
+		border-radius: 10px;
+	}
+	.confirmButton {
+		cursor: pointer;
+		margin-top: -4rem;
+		width: 100%;
+		height: 55px;
+		background-color: hsl(278, 68%, 11%);
+		border-radius: 10px;
+		color: hsl(270, 3%, 87%);
+	}
+	.rightside label {
+		text-transform: uppercase;
+		color: hsl(278, 68%, 11%);
+		font-size: 15px;
+	}
+	#errorBorder {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 100%;
+		height: 45px;
+	}
+	#errorBorders {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 100%;
+		height: 45px;
+	}
+	#errorMonthYear {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 25%;
+		height: 45px;
+	}
+	#errorYear {
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+		width: 25%;
+		height: 45px;
+	}
+	#wrongcvc {
+		width: 36%;
+		height: 45px;
+		border: 2px solid hsl(0, 100%, 66%);
+		border-radius: 10px;
+	}
+	.errors {
+		display: flex;
+		width: 270px;
+		justify-content: space-between;
+	}
+	.continuebtn {
+		cursor: pointer;
+		margin-top: 2rem;
+		width: 100%;
+		height: 55px;
+		background-color: hsl(278, 68%, 11%);
+		border-radius: 10px;
+		color: hsl(270, 3%, 87%);
+	}
 }
